# softermax-hf

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
configs/: softerllama-15M.yaml
models/: README.md
src/: __init__.py  configuration_llama.py  configuration_softerllama.py  dataloader.py  functional.py  modeling_llama.py  modeling_softerllama.py  scheduler.py  training_utils.py
src/quantization/: quant.py  quantizer.py  utils.py
src/softerbert/: configuration_softerbert.py  modeling_softerbert.py
src/softerllama/: configuration_softerllama.py  modeling_softerllama.py
src/tests/: test_dataloader.py  test_functional.py  test_modeling_softerllama.py
src/tests/__snapshots__/: test_dataloader.ambr  test_functional.ambr
tests/: test_modeling_softerllama.py
wandb/: README.md
