[project]
name = "softermax-hf"
version = "0.0.1"
requires-python = ">=3.8"

[tool.black]
line_length = 120

[tool.ruff]
line-length = 120

target-version = "py38"

select = ["E", "F", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []

exclude = [".git", "venv"]

[tool.pytest.ini_options]
addopts = """
    -p no:warnings
"""